Tue Jul 14 20:46:18 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * TAO_IDL/contrib/mcpp/system.cpp:

          Further warning fixes. 
        
Tue Jul 14 20:32:34 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * TAO_IDL/be/be_visitor_component/component_exs.cpp:

          Roll back commented out port provider, while a good idea in theory,
          causes warnings in generated code which may be part of the automated
          build.

Tue Jul 14 20:15:03 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * TAO_IDL/contrib/mcpp/eval.cpp:
        * TAO_IDL/contrib/mcpp/internal.H:
        * TAO_IDL/contrib/mcpp/lib.cpp:
        * TAO_IDL/contrib/mcpp/main.cpp:
        * TAO_IDL/contrib/mcpp/mbchar.cpp:
        * TAO_IDL/contrib/mcpp/support.cpp:
        * TAO_IDL/contrib/mcpp/system.cpp:

          Address some warnings.

Tue Jul 14 14:21:41 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * TAO_IDL/be/be_visitor_any_extracted_type_decl.cpp:
        * TAO_IDL/be/be_visitor_component/component_ex_idl.cpp:
        * TAO_IDL/be/be_visitor_null_return_value.cpp:
        * TAO_IDL/be/be_visitor_operation/operation_svs.cpp:
        * TAO_IDL/be/be_visitor_operation/rettype.cpp:
        * TAO_IDL/util/utl_global.cpp:
          Resolved Fuzz errors.

Tue Jul 14 11:12:09 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * .:
        * MPC/modules:
        * MPC/modules/IDLHelper.pm:
        * NEWS:
        * TAO_IDL/TAO_IDL_ACE.mwc:
        * TAO_IDL/ast/ast_component.cpp:
        * TAO_IDL/ast/ast_concrete_type.cpp:
        * TAO_IDL/ast/ast_decl.cpp:
        * TAO_IDL/ast/ast_home.cpp:
        * TAO_IDL/ast/ast_interface.cpp:
        * TAO_IDL/ast/ast_operation.cpp:
        * TAO_IDL/ast/ast_string.cpp:
        * TAO_IDL/be/be_codegen.cpp:
        * TAO_IDL/be/be_decl.cpp:
        * TAO_IDL/be/be_global.cpp:
        * TAO_IDL/be/be_helper.cpp:
        * TAO_IDL/be/be_identifier_helper.cpp: